Add DFIR timeline page link to home and nav

--- a/config.toml
+++ b/config.toml
@@ -42,3 +42,9 @@ enableRobotsTXT = true
   name = "About"
   url  = "/about/"
   weight = 3
+
+[[menu.main]]
+  name = "Timeline"
+  url  = "/timeline/"
+  weight = 30
+
